logs/shine.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Events-0.3.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/events'...
Listing './lib/python3.5/site-packages/events/tests'...
Listing './lib/python3.5/site-packages/netkit'...
Compiling './lib/python3.5/site-packages/netkit/box.py'...
***   File "./lib/python3.5/site-packages/netkit/box.py", line 100
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netkit/contrib'...
Compiling './lib/python3.5/site-packages/netkit/contrib/tcp_client.py'...
***   File "./lib/python3.5/site-packages/netkit/contrib/tcp_client.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netkit/stream.py'...
***   File "./lib/python3.5/site-packages/netkit/stream.py", line 214
    except socket.timeout, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netkit-0.2.159.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setproctitle-1.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shine'...
Listing './lib/python3.5/site-packages/shine/contrib'...
Listing './lib/python3.5/site-packages/shine/forwarder'...
Listing './lib/python3.5/site-packages/shine/gateway'...
Listing './lib/python3.5/site-packages/shine/gateway/server'...
Compiling './lib/python3.5/site-packages/shine/gateway/server/connection.py'...
***   File "./lib/python3.5/site-packages/shine/gateway/server/connection.py", line 93
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shine/share'...
Compiling './lib/python3.5/site-packages/shine/share/config.py'...
***   File "./lib/python3.5/site-packages/shine/share/config.py", line 67
    raise t, v, tb
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shine/share/utils.py'...
***   File "./lib/python3.5/site-packages/shine/share/utils.py", line 13
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shine/trigger'...
Listing './lib/python3.5/site-packages/shine/worker'...
Compiling './lib/python3.5/site-packages/shine/worker/connection.py'...
***   File "./lib/python3.5/site-packages/shine/worker/connection.py", line 184
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shine/worker/request.py'...
***   File "./lib/python3.5/site-packages/shine/worker/request.py", line 47
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shine-0.2.21.egg-info'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './share'...
Listing './share/python-wheels'...
